--- a/templates/index.html
+++ b/templates/index.html
@@ -31,6 +31,14 @@
           {{.RelayDescription}}
         </p>
 
+        <!-- Donate Button -->
+        <a
+          href="https://pay.azzamo.net/apps/3unuyUqf5c4ra6URaGcV6AXHWpC2/crowdfund"
+          class="bg-purple-500 hover:bg-purple-600 text-white font-bold py-2 px-4 rounded inline-block mb-6"
+          target="_blank"
+          >Donate</a
+        >
+
         <!-- Relay URL -->
         <a
           href="#"
@@ -45,6 +53,13 @@
     <footer class="text-center py-6 bg-gray-800 w-full">
       <p class="text-lg text-gray-400">
         Proudly powered by
+        <a
+          href="https://azzamo.net"
+          target="_blank"
+          class="text-purple-300 hover:text-purple-400 underline"
+          >Azzamo</a
+        >
+        |
         <a
           href="https://khatru.nostr.technology/"
           target="_blank"
